--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><a href="https://hafizsohel.github.io" target="_blank">https://hafizsohel.github.io/</a></span>
+   					<span><a href="https://hafizsohel.github.io/" target="_blank">https://hafizsohel.github.io/</a></span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -347,10 +347,11 @@
 	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
+					<!--
 	   				<div class="timeline-header">
 	   					<h3>Masters in Applied Statistics and Data Science</h3>
 	   					<p>April 2022 - May 2023</p>
-	   				</div>
+	   				</div> -->
 
 	   				<div class="timeline-content">
 	   					<h4><a href="https://www.juniv.edu/" target="_blank">Jahangirnagar University</a></h4>
@@ -370,12 +371,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>BSc. in Software Engineering</h3>
-	   					<p>Auguust 2015 - September 2019</p>
+	   					<h3>BSc. in Computer Science and Engineering</h3>
+	   					<p>Jan 2015 - Dec 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4><a href="https://daffodilvarsity.edu.bd/" target="_blank">Daffodil International University</a></h4>
+	   					<h4><a href="https://daffodilvarsity.edu.bd/" target="_blank">IUBAT - International University of Business Agriculture and Technology</a></h4>
 	   					<p>I have completed all the basic to advanced courses of CS. Along with my friends developed and participated some project showcasing event.</p>
 						<h3>Major achievements:</h3>
 						<ul>
@@ -628,10 +629,10 @@
 					      <div class="categories">Android Native Development</div>               
 					   </div>
 
-			         <div class="link-box">
+			         <!-- <div class="link-box">
 			            <a href="https://play.google.com/store/apps/details?id=app.com.gitlib" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+			         </div>	--> 	      
 
 				   </div> <!-- /modal-06 -->
 
@@ -718,7 +719,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>shakil.py@gmail.com<br></p>
+   			<p>sohel.hafizurrahman@gmail.com<br></p>
 
    		</div>
 
@@ -730,7 +731,7 @@
 
    			<h5>Contact with me at Mobile/What's App At</h5>
 
-   			<p>Phone/Mobile: (+880) 1688499299<br></p>
+   			<p>Phone/Mobile: (+880) 1773642161<br></p>
 
    		</div>
    		
@@ -759,9 +760,9 @@
 
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
+		        	<span>© Copyright 2024 </span> 
+		        	<span>Design by <a href="http://www.styleshout.com/">Styleshout</a></span> 
+		        	<span>Distributed by <a href="https://themewagon.com/">Themewagon</a></span>	         	
 		         </div>		                  
 	      	</div>
 
