--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>System Engineer (Internship)</h3>
-	   					<p>Feb 2022 - April 2022</p>
+	   					<p>Mar 2022 - May 2022</p>
 	   				
 	   				</div>
 
@@ -391,7 +391,7 @@
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">E-Commerce App</h3>	     					    
 		     					    	 <span class="folio-types">
-											Android Development with Java
+											Android Native Development
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -407,7 +407,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Human Resource Management</h3>	     					    
 		     					    	<span class="folio-types">
-											Android Development with Java
+											Android Native Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -423,7 +423,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">MVVM CRUD Operation</h3>	     					    
 		     					    	<span class="folio-types">
-											Android Development with Java
+											Android Native Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -439,7 +439,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Lunch Management System</h3>	     					    
 		     					    	<span class="folio-types">
-											Android Development with Kotlin
+											Android Native Development
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -455,7 +455,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">My Note App</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Android Development with Java
+											Android Native Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -508,11 +508,11 @@ Upon confirmation, save the order details in a Firestore collection (e.g., order
 Clear the cart items from the Room database after a successful order.</p>
 						  </p>
 
-					      <div class="categories"><h4>Android Development with Java</h4></div>			               
+					      <div class="categories"><h4>Android Native Development</h4></div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#" class="popup-modal-dismiss">Details</a>
+			            <a href="#" class="popup-modal-dismiss">Close</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		    
 
@@ -542,11 +542,11 @@ Clear the cart items from the Room database after a successful order.</p>
 							
 							This app will improve employee management, streamline communication, and simplify attendance and leave tracking.
 
-					      <div class="categories"><h4>Android Development with Java</h4></div>               
+					      <div class="categories"><h4>Android Native Development</h4></div>               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#" class="popup-modal-dismiss">Details</a>
+			            <a href="#" class="popup-modal-dismiss">Close</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -562,11 +562,11 @@ Clear the cart items from the Room database after a successful order.</p>
 					      <h4>MVVM CRUD Operation</h4>		      
 					      <p>In the MVVM (Model-View-ViewModel) architecture, CRUD operations are handled through a structured flow. The ViewModel interacts with the Repository, which abstracts data access from the DAO for performing database operations using Room. The insert, update, delete, and get (read) methods are managed in the repository and triggered by the ViewModel, while the View (Activity/Fragment) observes the LiveData to update the UI automatically when data changes. This ensures a clean separation of concerns, making the app easier to maintain.</p>
 
-					      <div class="categories"><h4>Android Development with Java</h4></div>		               
+					      <div class="categories"><h4>Android Native Development</h4></div>		               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#" class="popup-modal-dismiss">Details</a>
+			            <a href="#" class="popup-modal-dismiss">Close</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -582,11 +582,11 @@ Clear the cart items from the Room database after a successful order.</p>
 					      <h4>Lunch Management System</h4>		      
 					      <p>The Lunch Management System allows users to manage employee attendance for lunch, marking employees as either present or absent. It includes the ability to insert employee names and track their daily attendance. The system automatically counts the number of present and absent employees, providing a clear summary. This summary can then be easily shared via email, WhatsApp, or other messaging platforms for efficient communication. The system ensures smooth and organized lunch attendance management, with the ability to send reports instantly.</p>
 
-					      <div class="categories"><h4>Android Development with Kotlin</h4></div>         
+					      <div class="categories"><h4>Android Native Development</h4></div>         
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#" class="popup-modal-dismiss">Details</a>
+			            <a href="#" class="popup-modal-dismiss">Close</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -602,11 +602,11 @@ Clear the cart items from the Room database after a successful order.</p>
 					      <h4>My Note App</h4>		      
 					      <p>My Note App - In the Note App, users can create, update, and delete notes, as well as pin or unpin them for better organization. The app also includes a search functionality that allows users to quickly find specific notes. All data is managed efficiently using the Room database, ensuring reliable storage and retrieval of notes.</p>
 
-					      <div class="categories"><h5>Android Development with Java</h5></div>		               
+					      <div class="categories"><h5>Android Native Development</h5></div>		               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#" class="popup-modal-dismiss">Details</a>
+			            <a href="#" class="popup-modal-dismiss">Close</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
