--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Hafizur Rahman.</h1>
+	   			<h5>Hello, World!</h5>
+	   			<h1>I'm Hafizur Rahman</h1>
 
 	   			<p class="intro-position">
-					<span>Android Developer</span>
-	   				<span>Software Quality Assurance Engineer (SQA Engineer)</span>	 
-					<span>Manual Testing</span>  			
-					<span>System Engineer</span>
+					<span>SQA Engineer</span>
+	   				<span>Software Quality Assurance Engineer (SQA Engineer)</span>	  			
+					<span>Former System Engineer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -121,9 +120,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Aspiring Android Developer is seeking an entry-level position to apply foundational knowledge in 
-					Java/Kotlin programming, eager to contribute to innovative app development and gain hands-on 
-					experience in a collaborative software development environment.</p>
+   				<p class="lead">I am a detail-oriented and motivated QA Engineer with hands-on experience in manual testing, test case design, and defect tracking across both mobile and web applications. I am skilled in identifying bugs, usability issues, and performance bottlenecks while collaborating closely with developers and product teams. With a strong understanding of software testing methodologies, QA tools, and the SDLC, I bring solid analytical and communication skills along with a passion for delivering high-quality, user-focused software solutions.</p>
    			</div>   			
 
    		</div>   		
@@ -164,28 +161,39 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Skills</h3>
+   			<h3>Technical Skills</h3>
 
-				<ul class="skill-bars">
-				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Android</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Java</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>Kotlin</strong>
-				   </li>
-				   <li>
-					<div class="progress percent75"><span>75%</span></div>
-					<strong>SQL</strong>
-				</li>
-				
-				</ul> <!-- /skill-bars -->		
+<ul class="skill-bars">
+   
+   <li>
+      <div class="progress percent75"><span>75%</span></div>
+      <strong>Java</strong>
+   </li>
+   <li>
+      <div class="progress percent70"><span>70%</span></div>
+      <strong>Kotlin</strong>
+   </li>
+   <li>
+      <div class="progress percent70"><span>70%</span></div>
+      <strong>Android</strong>
+   </li>
+</ul>
 
+<!-- New QA Skills Section -->
+<h3>Quality Assurance Skills</h3>
+<ul class="qa-skills">
+   <li>Manual, Functional, Regression, Smoke & Exploratory Testing</li>
+   <li>Mobile & Web Application Testing</li>
+   <li>Test Case Writing & Execution</li>
+   <li>Defect Tracking (Jira, ClickUp)</li>
+   <li>API Testing using Postman</li>
+   <li>Cross-browser & Cross-platform Testing</li>
+   <li>Requirement Analysis & Test Strategy Planning</li>
+   <li>Database Testing & Validation (SQL, Oracle)</li>
+   <li>Agile/Scrum Methodologies</li>
+   <li>Test Documentation (Test Plan, Test Cases, Reports)</li>
+</ul>
+		
    		</div>
 
    	</div>
@@ -371,7 +379,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Get a good idea about the projects that I have been working on/worked for. You can find all kinda projects here including my per projects and others.</p>
+   			<p class="lead">Get a good idea about the projects that I have been working on/worked for. You can find all kinda projects here, including my personal projects and others.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -738,7 +746,7 @@ Clear the cart items from the Room database after a successful order.</p>
 
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2024 </span> 
+		        	<span>© Copyright 2025 </span> 
 		        	<span>Design by <a href="http://www.styleshout.com/">Styleshout</a></span> 
 		        	<span>Distributed by <a href="https://themewagon.com/">Themewagon</a></span>	         	
 		         </div>		                  
