--- a/privacy_policy/bd_bank_info_privacy_policy.html
+++ b/privacy_policy/bd_bank_info_privacy_policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Sakhawat Hossain built the - <b>BD Bank Info - Loan | Routing</b> - Access detailed information about Bangladesh's leading banks. Explore their services, branch details, and contact information to make informed financial decisions.
+                  Hafizur Rahman built the - <b>BD Bank Info - Loan | Routing</b> - Access detailed information about Bangladesh's leading banks. Explore their services, branch details, and contact information to make informed financial decisions.
                 </p> <p>
                   This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
                 </p> <p>
