--- a/privacy_policy/git_lib_privacy_policy.html
+++ b/privacy_policy/git_lib_privacy_policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Sakhawat Hossain built the - <b>Git Lib</b> - Git Lib which is developed with a good motive to provide the developers trending GitHub libraries or open source resources. This application has all the feature that you need whether you want to know the trending GitHub repositories or developers or any other categorized libraries. Following are some of the top functionalities that you can get.
+                  Hafizur Rahman built the - <b>Git Lib</b> - Git Lib which is developed with a good motive to provide the developers trending GitHub libraries or open source resources. This application has all the feature that you need whether you want to know the trending GitHub repositories or developers or any other categorized libraries. Following are some of the top functionalities that you can get.
                 </p> <p>
                   This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
                 </p> <p>
