--- a/privacy_policy/vara_adai_privacy_policy.html
+++ b/privacy_policy/vara_adai_privacy_policy.html
@@ -9,7 +9,7 @@
     <body>
     <strong>Privacy Policy</strong> 
     <p>
-                  Sakhawat Hossain built the <b>ভাড়া আদায় - Rent Collector</b> app as an Ad Supported app. This SERVICE is provided by Sakhawat Hossain at no cost and is intended for use as is.
+                  Hafizur Rahman built the <b>ভাড়া আদায় - Rent Collector</b> app as an Ad Supported app. This SERVICE is provided by Hafizur Rahman at no cost and is intended for use as is.
                 </p> 
                 <p>
                   This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal nformation if anyone decided to use my Service.
